--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -2,6 +2,6 @@
 - name: Install Filebeat
   become: true
   yum:
-    name: "/tmp/filebeat-{{ elk_stack_version }}-x86_64.rpm"
+    name: "/tmp/filebeat-{{ filebeat_version }}-x86_64.rpm"
     state: present
   notify: restart Filebeat
